--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,10 @@
 	<packaging>war</packaging>
 	<name>demoSpringbootDocker</name>
 	<description>Demo project for Spring Boot</description>
+	
+	<build>
+		<finalName>demospring</finalName>
+	</build>
 
 	<properties>
 		<java.version>1.8</java.version>
