--- a/pom.xml
+++ b/pom.xml
@@ -56,12 +56,7 @@
 	</dependencies>
 
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
+		<finalName>demospring</finalName>
 	</build>
 
 </project>
